# xtyle-python

./: .gitignore  .pylintrc  MANIFEST.in  README.md  pyproject.toml
src/xtyle/: __init__.py  babel.min.js  client.py  core.py  custom.js  database.py  external_plugins.py  preact.py  prettier-full.min.js  prettier.min.js  unzip.py
src/xtyle/live_code/: __init__.py  core.py  environment.py  esmodules.py  get_xtyle.py  plugin_gzip.py  sample.py  static.py  templates.py  types.py  typescript_tools.py
src/xtyle/live_code/component-samples/: base.html  code.tsx  docs.tsx  props.tsx  style.scss
src/xtyle/live_code/sample-codes/: globals.d.ts  index.html  index.ts  package.json  postcss.config.cjs  preview.ts  rollup.config.js  tsconfig.json  vite.config.js  xtyle_build.mjs  xtyle_component.mjs
src/xtyle/live_code/templates-tools/: dev.html  init.html
tests/: dump.json  gui.sqlite3  settings.py  simple.py  simple_jsx.py  test_one.py
tests/static/app/: config.json  index-29770af3015a4d19be1c9d7dc2ddfd30.min.js  style-29770af3015a4d19be1c9d7dc2ddfd30.min.css
tests/templates/components/hello-world/: docs.js  index.jsx  props.ts  style.scss
